Fu Ying/HaiYang | #1324 fix defect of the devices icons aren't visible on IE and FF

--- a/datawinners/media/css/scss/section_all_datasenders.scss
+++ b/datawinners/media/css/scss/section_all_datasenders.scss
@@ -20,7 +20,7 @@
   position: relative;
   .device-icons {
     position: absolute;
-    bottom: 5px;
+    top: 60px;
     > div {
       float: left;
     }
